--- a/calculator.html
+++ b/calculator.html
@@ -1,139 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advanced Calculator</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Advanced Weight Calculator</title>
+  <link rel="stylesheet" href="style.css"/>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <style>
+    .weight-group { margin-bottom:20px; background:#222; padding:15px; border-radius:8px; }
+    .weight-group h3 { margin-top:0; color:#FFA500; }
+    .weight-group label { display:flex; justify-content:space-between; margin:5px 0; }
+    .weight-group input { width:80px; text-align:center; }
+    #generateBtn { background:#FFA500; }
+    table { margin-bottom:30px; }
+  </style>
 </head>
 <body>
-  <!-- Nav -->
-  <div class="top-nav">
-    <div class="left-section">
-      <a href="https://www.maba.com.my" target="_blank" style="color:white;text-decoration:none;">MABA</a>
-      <span>FIBA</span>
-    </div>
-    <div class="right-section">
-      <span>Listen</span>
-      <span>Search 🔍</span>
-      <span>👤</span>
-    </div>
-  </div>
-
-  <div class="sub-nav">
-    <a href="index.html">Home</a>
-    <a href="historical.html">Historical Stats</a>
-    <a href="calculator.html">Advanced Calculator</a>
-  </div>
-
-  <!-- Main Container -->
   <div class="container">
-    <h1>🏀 Position Ranking Calculator</h1>
-
-    <!-- Filters -->
+    <h1>🔧 Weighted Position Calculator</h1>
+    
     <div class="filter-bar">
-      <label>Competition:</label>
-      <select id="competitionSelect">
-        <option value="All">All</option>
-        <option value="U15 (Boys)">U15 (Boys)</option>
-        <option value="U17 (Boys)">U17 (Boys)</option>
-        <option value="MABA Cup">MABA Cup</option>
-        <option value="Agong Cup">Agong Cup</option>
-      </select>
+      <label>Competition:
+        <select id="competitionSelect"><option>All</option><option>U15 (Boys)</option><option>U17 (Boys)</option><option>MABA Cup</option><option>Agong Cup</option></select>
+      </label>
+      <label>Year:
+        <select id="yearSelect"><option>All</option><option>2024</option><option>2025</option></select>
+      </label>
+    </div>
+    
+    <div id="weightsContainer">
+      <div class="weight-group" id="guardGroup">
+        <h3>Guard Weights (Total = 100)</h3>
+        <label>PTS: <input type="number" name="guard_pts" value="30" min="0" max="100"/></label>
+        <label>AS:  <input type="number" name="guard_as" value="30" min="0" max="100"/></label>
+        <label>FGM: <input type="number" name="guard_fgm" value="20" min="0" max="100"/></label>
+        <label>TO:  <input type="number" name="guard_to" value="20" min="0" max="100"/></label>
+        <div>Sum: <span id="sum_guard">100</span></div>
+      </div>
 
-      <label>Year:</label>
-      <select id="yearSelect">
-        <option value="All">All</option>
-        <option value="2024">2024</option>
-        <option value="2025">2025</option>
-      </select>
+      <div class="weight-group" id="wingsGroup">
+        <h3>Wings Weights (Total = 100)</h3>
+        <label>PTS: <input type="number" name="wings_pts" value="25" min="0" max="100"/></label>
+        <label>REB: <input type="number" name="wings_reb" value="25" min="0" max="100"/></label>
+        <label>FGM: <input type="number" name="wings_fgm" value="25" min="0" max="100"/></label>
+        <label>ST:  <input type="number" name="wings_st" value="25" min="0" max="100"/></label>
+        <div>Sum: <span id="sum_wings">100</span></div>
+      </div>
 
-      <button onclick="loadRankings()">Load Rankings</button>
+      <div class="weight-group" id="centerGroup">
+        <h3>Center Weights (Total = 100)</h3>
+        <label>REB: <input type="number" name="center_reb" value="30" min="0" max="100"/></label>
+        <label>BS:  <input type="number" name="center_bs" value="30" min="0" max="100"/></label>
+        <label>PTS: <input type="number" name="center_pts" value="20" min="0" max="100"/></label>
+        <label>PF:  <input type="number" name="center_pf" value="20" min="0" max="100"/></label>
+        <div>Sum: <span id="sum_center">100</span></div>
+      </div>
+
+      <div class="weight-group" id="defGroup">
+        <h3>Defensive Weights (Total = 100)</h3>
+        <label>ST: <input type="number" name="def_st" value="40" min="0" max="100"/></label>
+        <label>BS: <input type="number" name="def_bs" value="30" min="0" max="100"/></label>
+        <label>TO: <input type="number" name="def_to" value="20" min="0" max="100"/></label>
+        <label>PF: <input type="number" name="def_pf" value="10" min="0" max="100"/></label>
+        <div>Sum: <span id="sum_def">100</span></div>
+      </div>
     </div>
 
-    <!-- Ranking Matrix -->
-    <div id="rankingMatrix" class="matrix-wrapper"></div>
+    <button id="generateBtn">Generate Rankings</button>
+    <div id="errorMsg" style="color:#f55; margin:10px 0;"></div>
+
+    <div id="rankingMatrix"></div>
   </div>
 
   <script>
     let originalData = [];
-
-    const positionWeights = {
-      guard: { pts: 0.3, as: 0.3, st: 0.2, fgm: 0.2, to: -0.2 },
-      wings: { pts: 0.25, reb: 0.2, fgm: 0.25, st: 0.2, pf: -0.1 },
-      center: { tres: 0.2, reb: 0.3, bs: 0.3, pts: 0.2, pf: -0.2 },
-      defense: { st: 0.4, bs: 0.3, to: -0.3, pf: -0.2 }
-    };
-
-    fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
-      .then(r => r.text())
-      .then(csv => {
-        const parsed = Papa.parse(csv, { header: true }).data;
-        originalData = parsed.map(row => ({
-          player: row['Player'],
-          competition: row['Competition'],
-          year: parseInt(row['Year']),
-          team: row['Team'],
-          gp: parseInt(row['GP']),
-          min: parseInt(row['Min']),
-          fga: parseInt(row['FGA']),
-          fgm: parseInt(row['FGM']),
-          fga2: parseInt(row['2FGA']),
-          fgm2: parseInt(row['2FGM']),
-          fga3: parseInt(row['3FGA']),
-          fgm3: parseInt(row['3FGM']),
-          fta: parseInt(row['FTA']),
-          ftm: parseInt(row['FTM']),
-          oreb: parseInt(row['OR']),
-          dreb: parseInt(row['DR']),
-          treb: parseInt(row['TR']),
-          as: parseInt(row['AS']),
-          to: parseInt(row['TO']),
-          st: parseInt(row['ST']),
-          bs: parseInt(row['BS']),
-          pf: parseInt(row['PF']),
-          fd: parseInt(row['FD']),
-          pts: parseInt(row['PTS'])
-        }));
+    fetch('https://docs.google.com/spreadsheets/d/…/pub?output=csv')
+      .then(r => r.text()).then(csv => {
+        Papa.parse(csv, { header:true, skipEmptyLines:true }).data.forEach(r => {
+          originalData.push({
+            player:r['Player'], competition:r['Competition'], year:parseInt(r['Year']),
+            team:r['Team'], pts:+r['PTS'], as:+r['AS'], fgm:+r['FGM'], reb:+r['TR'],
+            st:+r['ST'], bs:+r['BS'], to:+r['TO'], pf:+r['PF']
+          });
+        });
       });
 
-    function loadRankings() {
+    function sumWeights(prefix) {
+      return ['pts','as','fgm','reb','st','bs','to','pf']
+        .reduce((s, stat) => {
+          const el = document.querySelector(`input[name="${prefix}_${stat}"]`);
+          return el ? s + Number(el.value) : s;
+        },0);
+    }
+
+    function readWeights(prefix, stats) {
+      const w = {};
+      let total = 0;
+      stats.forEach(stat => {
+        const val = Number(document.querySelector(`input[name="${prefix}_${stat}"]`).value);
+        w[stat] = val;
+        total += val;
+      });
+      return stats.map(stat => [stat, w[stat] / total]);
+    }
+
+    function validateAll() {
+      const groups = ['guard','wings','center','def'];
+      let ok = true;
+      groups.forEach(g => {
+        const s = sumWeights(g);
+        document.getElementById(`sum_${g}`).textContent = s;
+        if (s !== 100) ok = false;
+      });
+      return ok;
+    }
+
+    function calculateScore(p, weights) {
+      return weights.reduce((sum, [stat, w]) => sum + (p[stat]||0)*w, 0);
+    }
+
+    function generate() {
+      document.getElementById('errorMsg').textContent = '';
+      if (!validateAll()) {
+        document.getElementById('errorMsg').textContent = '⚠️ Each group must sum to 100.';
+        return;
+      }
+
       const comp = document.getElementById('competitionSelect').value;
       const year = document.getElementById('yearSelect').value;
       let data = originalData.slice();
-
       if (comp !== 'All') data = data.filter(p => p.competition === comp);
       if (year !== 'All') data = data.filter(p => p.year.toString() === year);
 
-      generateRankingMatrix(data);
-    }
+      const config = {
+        guard: readWeights('guard',['pts','as','fgm','to']),
+        wings: readWeights('wings',['pts','reb','fgm','st']),
+        center: readWeights('center',['reb','bs','pts','pf']),
+        def:    readWeights('def',['st','bs','to','pf'])
+      };
 
-    function calculateScore(player, pos) {
-      const w = positionWeights[pos];
-      return Object.keys(w).reduce((sum, stat) => sum + (player[stat] || 0) * w[stat], 0);
-    }
-
-    function generateRankingMatrix(data) {
       const container = document.getElementById('rankingMatrix');
       container.innerHTML = '';
-
-      for (const pos in positionWeights) {
-        const arr = data.slice().sort((a, b) => calculateScore(b, pos) - calculateScore(a, pos));
-        const top10 = arr.slice(0, 10);
+      ['guard','wings','center','def'].forEach(pos => {
+        const weights = config[pos];
+        const sorted = data.map(p => ({
+          player:p.player, team:p.team, score:calculateScore(p,weights)
+        })).sort((a,b)=>b.score-a.score).slice(0,10);
 
         const tbl = document.createElement('table');
         tbl.innerHTML = `
-          <thead><tr><th colspan="3">${pos.toUpperCase()}</th></tr>
-                     <tr><th>Player</th><th>Team</th><th>Score</th></tr></thead>
-          <tbody>${top10.map(p =>
-            `<tr><td>${p.player}</td><td>${p.team}</td><td>${calculateScore(p, pos).toFixed(2)}</td></tr>`
-          ).join('')}</tbody>`;
-
+          <thead><tr><th>${pos.toUpperCase()}</th><th>Team</th><th>Score</th></tr></thead>
+          <tbody>${sorted.map(p=>`
+            <tr><td>${p.player}</td><td>${p.team}</td><td>${p.score.toFixed(2)}</td></tr>`).join('')}</tbody>`;
         container.appendChild(tbl);
-      }
+      });
     }
+
+    document.getElementById('generateBtn').onclick = generate;
+    ['guard','wings','center','def'].forEach(g => {
+      ['pts','as','fgm','reb','st','bs','to','pf'].forEach(stat => {
+        const el = document.querySelector(`input[name="${g}_${stat}"]`);
+        if (el) el.oninput = () => document.getElementById(`sum_${g}`).textContent = sumWeights(g);
+      });
+    });
   </script>
 </body>
 </html>
