--- a/calculator.html
+++ b/calculator.html
@@ -73,7 +73,7 @@
 
   <script>
     let originalData = [];
-    fetch('https://docs.google.com/spreadsheets/d/…/pub?output=csv')
+    fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
       .then(r => r.text()).then(csv => {
         Papa.parse(csv, { header:true, skipEmptyLines:true }).data.forEach(r => {
           originalData.push({
