--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🔧 Weighted Position Calculator</h1>
+    <h1>Weighted Position Calculator</h1>
     
     <div class="filter-bar">
       <label>Competition:
