--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Advanced Weight Calculator</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
     .weight-group { margin-bottom:20px; background:#222; padding:15px; border-radius:8px; }
