--- a/calculator.html
+++ b/calculator.html
@@ -16,6 +16,35 @@
   </style>
 </head>
 <body>
+  <!-- nav bar -->
+  <div class="top-nav">
+    <div class="left-section">
+      <a href="https://www.maba.com.my" target="_blank" style="color: white; text-decoration: none;">MABA</a>
+      <span>FIBA</span>
+    </div>
+    <div class="right-section">
+      <span>Listen</span>
+      <span>Search 🔍</span>
+      <span>👤</span>
+    </div>
+  </div>
+  
+  <!-- Sub-nav with dropdown -->
+  <div class="sub-nav">
+    <a href="index.html">Home</a>
+    <a href="historical.html">Historical Stats</a>
+    <a href="calculator.html">Advanced Calculator</a>
+    <div class="dropdown">
+      <a href="#" class="dropbtn">Competition ▼</a>
+      <div class="dropdown-content">
+        <a href="#">MABA Cup</a>
+        <a href="#">National U17</a>
+        <a href="#">National U15</a>
+        <a href="#">Agong Cup</a>
+      </div>
+    </div>
+  </div>
+  
   <div class="container">
     <h1>Weighted Position Calculator</h1>
     
