--- a/calculator.html
+++ b/calculator.html
@@ -60,48 +60,59 @@
   <div class="weight-panel">
     <h2>Weight Allocation (Total 100 per Position)</h2>
   
+    <!-- POINT GUARD -->
     <div class="position-group">
       <h3>Point Guard</h3>
       <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" data-stat="pts" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" data-stat="as" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" data-stat="fga" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" data-stat="to" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-      </div>
-      <p>Total: <span id="pg-total">100</span>%</p>
-      
-      <h3>Wings</h3>
-      <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" data-stat="pts" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" data-stat="as" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" data-stat="fga" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" data-stat="to" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-      </div>
-      <p>Total: <span id="pg-total">100</span>%</p>
-
-      <h3>Center</h3>
-      <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" data-stat="pts" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" data-stat="as" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" data-stat="fga" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" data-stat="to" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-      </div>
-      <p>Total: <span id="pg-total">100</span>%</p>
-
-      <h3>Defensive</h3>
-      <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" data-stat="pts" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" data-stat="as" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" data-stat="fga" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" data-stat="to" oninput="updateWeight(this, 'pg')"> <span>25</span>%</label>
+        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
+        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
+        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
+        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
       </div>
       <p>Total: <span id="pg-total">100</span>%</p>
     </div>
-
+  
+    <!-- WINGS -->
+    <div class="position-group">
+      <h3>Wings</h3>
+      <div class="slider-group" id="wings-weights">
+        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
+        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
+        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
+        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
+      </div>
+      <p>Total: <span id="wings-total">100</span>%</p>
+    </div>
+  
+    <!-- CENTER -->
+    <div class="position-group">
+      <h3>Center</h3>
+      <div class="slider-group" id="center-weights">
+        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
+        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
+        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
+        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
+      </div>
+      <p>Total: <span id="center-total">100</span>%</p>
+    </div>
+  
+    <!-- DEFENSIVE -->
+    <div class="position-group">
+      <h3>Defensive</h3>
+      <div class="slider-group" id="defensive-weights">
+        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
+        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
+        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
+        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
+      </div>
+      <p>Total: <span id="defensive-total">100</span>%</p>
+    </div>
+  
     <button id="generateBtn">Generate Rankings</button>
     <div id="errorMsg" style="color:#f55; margin:10px 0;"></div>
     <div id="rankingMatrix"></div>
   </div>
+
     
   <script>
     let originalData = [];
