--- a/calculator.html
+++ b/calculator.html
@@ -64,10 +64,10 @@
     <div class="position-group">
       <h3>Point Guard</h3>
       <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>25</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
+        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
+        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="pg-total">100</span>%</p>
     </div>
@@ -76,10 +76,10 @@
     <div class="position-group">
       <h3>Wings</h3>
       <div class="slider-group" id="wings-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>25</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
+        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
+        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="wings-total">100</span>%</p>
     </div>
@@ -88,10 +88,10 @@
     <div class="position-group">
       <h3>Center</h3>
       <div class="slider-group" id="center-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>25</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="center-total">100</span>%</p>
     </div>
@@ -100,10 +100,10 @@
     <div class="position-group">
       <h3>Defensive</h3>
       <div class="slider-group" id="defensive-weights">
-        <label>PTS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
-        <label>AS <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
-        <label>FGA <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
-        <label>TO <input type="range" min="0" max="100" value="25" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>25</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
+        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
+        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="defensive-total">100</span>%</p>
     </div>
@@ -200,7 +200,7 @@
 
   function updateWeightAutoAdjusted(input, group) {
     const sliders = [...document.querySelectorAll(`#${group}-weights input[type="range"]`)];
-    const total = 100;
+    const total = 50;
     const movedSlider = input;
     const movedValue = parseInt(movedSlider.value);
     const others = sliders.filter(slider => slider !== movedSlider);
