--- a/calculator.html
+++ b/calculator.html
@@ -64,10 +64,8 @@
     <div class="position-group">
       <h3>Point Guard</h3>
       <div class="slider-group" id="pg-weights">
-        <label>PTS <input type="pg_pts" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
-        <label>AST <input type="pg_ast" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
-        <label>FGA <input type="pg_fga" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
-        <label>TOS <input type="pg_tos" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label> <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label> <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="pg-total">100</span>%</p>
     </div>
@@ -76,10 +74,8 @@
     <div class="position-group">
       <h3>Wings</h3>
       <div class="slider-group" id="wg-weights">
-        <label>PTS <input type="wg_pts" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
-        <label>AST <input type="wg_ast" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
-        <label>FGA <input type="wg_fga" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
-        <label>TOS <input type="wg_tos" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label> <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label> <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="wings-total">100</span>%</p>
     </div>
@@ -88,10 +84,8 @@
     <div class="position-group">
       <h3>Center</h3>
       <div class="slider-group" id="center-weights">
-        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
-        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
-        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
-        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label> <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label> <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="center-total">100</span>%</p>
     </div>
@@ -100,10 +94,8 @@
     <div class="position-group">
       <h3>Defensive</h3>
       <div class="slider-group" id="def-weights">
-        <label>PTS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
-        <label>AST <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
-        <label>FGA <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
-        <label>TOS <input type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
+        <label>PTS <input name="pg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label> <label>AST <input name="pg_ast" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
+        <label>FGA <input name="pg_fga" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label> <label>TOS <input name="pg_tos" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
       </div>
       <p>Total: <span id="defensive-total">100</span>%</p>
     </div>
