--- a/calculator.html
+++ b/calculator.html
@@ -76,10 +76,10 @@
     <div class="position-group">
       <h3>Wings</h3>
       <div class="slider-group" id="wg-weights">
-        <label>PTS <input name="wg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label> 
-        <label>AST <input name="wg_as" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>50</span>%</label>
-        <label>FGA <input name="wg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>0</span>%</label> 
-        <label>TOS <input name="wg_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'wings')"> <span>50</span>%</label>
+        <label>PTS <input name="wg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>0</span>%</label> 
+        <label>AST <input name="wg_as" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>50</span>%</label>
+        <label>FGA <input name="wg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>0</span>%</label> 
+        <label>TOS <input name="wg_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>50</span>%</label>
       </div>
       <p>Total: <span id="wings-total">100</span>%</p>
     </div>
@@ -100,10 +100,10 @@
     <div class="position-group">
       <h3>Defensive</h3>
       <div class="slider-group" id="def-weights">
-        <label>PTS <input name="def_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label> 
-        <label>AST <input name="def_as" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>0</span>%</label>
-        <label>FGA <input name="def_fga" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>50</span>%</label> 
-        <label>TOS <input name="def_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'defensive')"> <span>50</span>%</label>
+        <label>PTS <input name="def_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>0</span>%</label> 
+        <label>AST <input name="def_as" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>0</span>%</label>
+        <label>FGA <input name="def_fga" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>50</span>%</label> 
+        <label>TOS <input name="def_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>50</span>%</label>
       </div>
       <p>Total: <span id="defensive-total">100</span>%</p>
     </div>
