--- a/calculator.html
+++ b/calculator.html
@@ -81,17 +81,17 @@
         <label>FGA <input name="wg_pts" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>0</span>%</label> 
         <label>TOS <input name="wg_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>50</span>%</label>
       </div>
-      <p>Total: <span id="wings-total">100</span>%</p>
+      <p>Total: <span id="wg-total">100</span>%</p>
     </div>
   
     <!-- CENTER -->
     <div class="position-group">
       <h3>Center</h3>
       <div class="slider-group" id="center-weights">
-        <label>PTS <input name="ctr_pts" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>50</span>%</label> 
-        <label>AST <input name="ctr_as" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
-        <label>FGA <input name="ctr_fga" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label> 
-        <label>TOS <input name="ctr_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>50</span>%</label>
+        <label>PTS <input name="center_pts" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>50</span>%</label> 
+        <label>AST <input name="center_as" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label>
+        <label>FGA <input name="center_fga" type="range" min="0" max="50" value="0" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>0</span>%</label> 
+        <label>TOS <input name="center_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>50</span>%</label>
       </div>
       <p>Total: <span id="center-total">100</span>%</p>
     </div>
@@ -105,7 +105,7 @@
         <label>FGA <input name="def_fga" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>50</span>%</label> 
         <label>TOS <input name="def_to" type="range" min="0" max="50" value="50" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>50</span>%</label>
       </div>
-      <p>Total: <span id="defensive-total">100</span>%</p>
+      <p>Total: <span id="def-total">100</span>%</p>
     </div>
   
     <button id="generateBtn">Generate Rankings</button>
