--- a/calculator.html
+++ b/calculator.html
@@ -147,7 +147,7 @@
     }
 
     function validateAll() {
-      const groups = ['guard','wings','center','def'];
+      const groups = ['pg','wg','center','def'];
       let ok = true;
       groups.forEach(g => {
         const s = sumWeights(g);
