--- a/calculator.html
+++ b/calculator.html
@@ -131,7 +131,7 @@
       });
 
     function sumWeights(prefix) {
-      return ['pts','as','fgm','reb','st','bs','to','pf']
+      return ['fga','fgm','2fga','2fgm','3fga','3fgm','fta','ftm','or','dr','tr','as','to','st','bs','pf','fd','pts']
         .reduce((s, stat) => {
           const el = document.querySelector(`input[name="${prefix}_${stat}"]`);
           return el ? s + Number(el.value) : s;
