--- a/calculator.html
+++ b/calculator.html
@@ -58,7 +58,7 @@
     </div>
 
   <div class="weight-panel">
-    <h2>Weight Allocation (Total 100 per Position)</h2>
+    <h2>Weight Allocation</h2>
     <div class = 'row-wrapper'>
       <!-- POINT GUARD -->
       <div class="position-group">
