--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Top ESPN-style nav -->
   <div class="top-nav">
     <div class="left-section">
-      <a href="https://www.maba.com.my" target="_blank" style="color: white; text-decoration: none;">MABA</a>
+      <a href="https://www.maba.com.my" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
